--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">APP Acarreos</string>
-    <string name="usuario">Usuario</string>
+    <string name="usuario">Correo</string>
     <string name="password">Contraseña</string>
     <string name="ingresar">Ingresar</string>
     <string name="ingresar_Google">Ingresar con Google</string>
