--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">APP Acarreos</string>
-    <string name="usuario">User</string>
+    <string name="usuario">Email</string>
     <string name="password">Password</string>
     <string name="ingresar">Login</string>
     <string name="ingresar_Google">Login Google</string>
